--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,10 @@
 		<version>2.1.5.RELEASE</version>
 	</parent>
 
-
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+	</dependencies>
 </project>
