--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>malex.argent.watcher.TransferWatcherApplication</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
