--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 watcher:
+  notifyUrl: "http://requestbin.fullcontact.com/11v290p1/notify"
   addresses:
     - '0x7E0480Ca9fD50EB7A3855Cf53c347A1b4d6A2FF5'
     - '0xF6fF95D53E08c9660dC7820fD5A775484f77183A'
